fix content overflow on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ h3 {
 
 .blocks-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   min-height: 100%;
   min-width: 100%;
@@ -34,7 +34,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  width: auto;
 }
 
 .all-container {
@@ -128,7 +128,6 @@ h3 {
   width: auto;
   position: sticky;
   top: 10rem;
-  right: 30rem; 
   display: flex;
   flex-direction: column;
   justify-content: center;
